my first commit

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>My Website</title>
 </head>
 <body>
-    <h3 style="color :brown">tuser</h3>
+    <h3 style="color :brown">tuser jhhghbjnhjhh</h3>
 </body>
 </html>
 
